--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project",
-  "homepage": "https://anasalidev.github.io/foodwebsite",
+  "homepage": "https://anasalidev.github.io/Foodorderwebsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-digital-clock": "^0.1.2",
+    "react-digital-clock": "^0.1.2",  
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
